@@ -26,12 +26,16 @@ ___
 ___
 
 ### Requirements
-* Java 8+ ??
-* Python 3.8, six
-* @michele
+* Java 14, JavaFX 14
+* Python3, six
 ___
 
 ### Getting Started
+
+Per avviare il tool tramite .jar, eseguire il comando:
+
+`java -jar --module-path "path_to_javaFX-sdk\lib" --add-modules=javafx.controls,javafx.fxml G-Repo.jar`
+
 G-Repo provides functionality to search for repositories by native github [qualifiers](https://docs.github.com/en/github/searching-for-information-on-github/searching-for-repositories).
 
 ![](Demos/query_demo.gif)
